Rename assertions to assertion-basic