@@ -14,7 +14,7 @@
 
     <modules>
         <module>duel-core</module>
-        <module>duel-assertions</module>
+        <module>duel-assertion-basic</module>
         <module>duel-fake-server</module>
         <module>duel-tests</module>
         <module>duel-cli</module>
@@ -84,7 +84,7 @@
             <dependency>
                 <groupId>org.junit</groupId>
                 <artifactId>junit-bom</artifactId>
-                <version>5.5.2</version>
+                <version>5.6.0-M1</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -138,6 +138,17 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>3.0.0-M3</version>
+                    <configuration>
+                        <argLine>
+                        -Duser.language=en
+                        --add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
+                        --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED 
+                        </argLine>
+                        <excludes>
+                            <!-- do all tests -->
+                            <exclude></exclude>
+                        </excludes>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
